--- a/trangchu,sp/Sanpham.html
+++ b/trangchu,sp/Sanpham.html
@@ -90,7 +90,7 @@
         <img src="../Image/img3.png" alt="">
         <ul class="list-product">
             <div class="item">
-                <a href="../iphone 11.html"><img  src="../Image/ip 11.jpg" alt="">
+                <a href="../product.html/iphone 11.html"><img  src="../Image/ip 11.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -104,7 +104,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../iphone13.html"><img  src="../Image/iphone-13-pro.jpg" alt="">
+                <a href="../product.html/iphone13.html"><img  src="../Image/iphone-13-pro.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -117,7 +117,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../Realme10 ProPlus5G.html"><img src="../Image/600_realme_10_pro_plus_5g_xanh.jpg" alt="">
+                <a href="../product.html/Realme10 ProPlus5G.html"><img src="../Image/600_realme_10_pro_plus_5g_xanh.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -129,7 +129,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../RealmeQ5Pro.html"><img src="../Image/realme-q5-pro.jpg" alt="">
+                <a href="../product.html/RealmeQ5Pro.html"><img src="../Image/realme-q5-pro.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -145,7 +145,7 @@
         </ul>
         <ul class="list-product">
             <div class="item">
-                <a href="../RedmiK50.html"><img src="../Image/k50.jfif" alt="">
+                <a href="../product.html/RedmiK50.html"><img src="../Image/k50.jfif" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -159,7 +159,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../SamsungGalax S22+5G.html"><img  src="../Image/Galaxy-S22+.jpg" alt="">
+                <a href="../product.html/SamsungGalax S22+5G.html"><img  src="../Image/Galaxy-S22+.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -173,7 +173,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../SamsungGalaxyS21Plus5G.html"><img  src="../Image/samsung-galaxy-s21.jpg" alt="">
+                <a href="../product.html/SamsungGalaxyS21Plus5G.html"><img  src="../Image/samsung-galaxy-s21.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -187,7 +187,7 @@
             </a>
             </div>
             <div class="item">
-                <a href="../redmik605G.html"><img src="../Image/readmek605g.jpg" alt="">
+                <a href="../product.html/redmik605G.html"><img src="../Image/readmek605g.jpg" alt="">
                 <div class="stars">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
