--- a/login/danky.html
+++ b/login/danky.html
@@ -14,7 +14,7 @@
 		<div class="form-box">
 			<div class="form-value">
 				<form action="">
-					<h2>đăng ký</h2>
+					<h2>Đăng Ký</h2>
 					<div class="inputbox">
 						<i class="fa fa-user"></i>
 						<input type="text"required>
@@ -41,10 +41,10 @@
 						<label for=""> Xác nhận mật khẩu</label> 
 					</div>
 					<div class="forget">
-						<label for=""><input type="radio"  name="gioitinh" required>Male</label>
+						<label for=""><input type="radio"  name="gioitinh" required>Nam</label>
 					</div>
 					<div class="forget">
-						<label for=""><input type="radio" name="gioitinh" required>Fale</label>
+						<label for=""><input type="radio" name="gioitinh" required>Nữ</label>
 					</div>
 					<button><a href="dangnhap.html"> Đăng ký</a></button>
 					<div class="register">
