--- a/login/dangnhap.html
+++ b/login/dangnhap.html
@@ -15,7 +15,7 @@
 		<div class="form-box">
 			<div class="form-value">
 				<form action="">	
-					<h2>Đăng nhập</h2>
+					<h2>Đăng Nhập</h2>
 					<div class="inputbox">
 						<i class="fa fa-user"></i>
 						<input type="text"required>
